// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Publication test on ios renders a DatePublication component with content 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
      },
      Object {},
    ]
  }
>
  Saturday July 01 2017
  , The Times
</Text>
`;

exports[`Date Publication test on ios renders a DatePublication component with red font color 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  Saturday July 01 2017
  , The Times
</Text>
`;
